manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "akscluster-75df"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "akscluster-75df"
  template:
    metadata:
      labels:
        app: "akscluster-75df"
    spec:
      containers:
        - name: "akscluster-75df"
          image: "workshopcr2020.azurecr.io/akscluster"
          ports:
          - containerPort: 5432
