manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "akscluster-75df"
    labels:
        app: "akscluster-75df"
spec:
    type: ClusterIP
    ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
      name: http
    selector:
        app: "akscluster-75df"
