manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "akscluster-75df"
    labels:
        app: "akscluster-75df"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: aksclusterb7f4-akscluster-75df.328c1f829ffa40a39d24.westeurope.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "akscluster-75df"
                servicePort: 5432
